--- a/stage9/static/stage9/css/style.css
+++ b/stage9/static/stage9/css/style.css
@@ -183,6 +183,18 @@ a:active {
     position: absolute;
 }
 
+.edit_bt {
+    display: inline;
+    border: 1px solid #555555;
+    background: #e6e6e6;
+    font-weight: normal;
+    border-radius: 6px;
+    padding: 5px;
+    top: 10px;
+    right: 250px;
+    position: absolute;
+}
+
 .item_ingredient:hover {
     cursor:pointer;
     border: 1px solid #555555;
@@ -396,7 +408,6 @@ a:active {
 
 .bot_items {
     display: inline-block;
-    margin-left: 5px;
     font-weight: 300;
     color: white;
     margin-left: 10px;
@@ -437,6 +448,13 @@ a:active {
     padding: 20px;
     border: 1px solid #434343;
     border-radius: 6px;
+}
+
+.recipe_form {
+    padding: 20px;
+    border: 1px solid #434343;
+    border-radius: 6px;
+    position: relative;
 }
 
 .cook_item_cont {
