--- a/stage9/templates/stage9/base.html
+++ b/stage9/templates/stage9/base.html
@@ -31,6 +31,8 @@
         <script type="text/javascript" src="{% static "comments/js/comments.js" %}"></script>
         <script type="text/javascript" src="{% static 'cooks/js/ajax_recipe.js' %}"></script>
         <script type="text/javascript" src="{% static 'stage9/js/jquery.formset.js' %}"></script>
+        <script type="text/javascript" src="{% static 'tinymce/js/tinymce/tinymce.min.js' %}"></script>
+        <script type="text/javascript" src="{% static 'tinymce/js/tiny_mce/tiny_mce.js' %}"></script>
         <script type="text/javascript" src="{% static 'stage9/js/ajax_tags.js' %}"></script>
 
         <script>
