--- a/cooks/templates/cooks/add_recipe.html
+++ b/cooks/templates/cooks/add_recipe.html
@@ -1,6 +1,40 @@
 {% extends "stage9/base.html" %}
 
 {% block content %}
+    <script>
+    tinyMCE.init({
+        selector: "#id_description",  // change this value according to your HTML
+
+        theme: "advanced",
+        plugins: 'autolink,lists,pagebreak,style,layer,save,advhr,advimage,advlink,emotions,iespell,inlinepopups,insertdatetime,preview,media,searchreplace,print,contextmenu,paste,directionality,fullscreen,noneditable,visualchars,nonbreaking,xhtmlxtras,template,wordcount,advlist,autosave',
+        paste_auto_cleanup_on_paste: "true",
+        statusbar: false,
+
+              // Theme options
+        theme_advanced_path : false,
+        theme_advanced_buttons1: 'bold,italic,underline,strikethrough,|,justifyleft,justifycenter,justifyright,justifyfull',
+        theme_advanced_buttons2: 'cut,copy,paste,pastetext,pasteword,|,search,replace,|,bullist,numlist,|,outdent,indent,blockquote,|,undo,redo,|,insertdate,inserttime,preview',
+        theme_advanced_buttons3: 'hr,removeformat,visualaid,|,sub,sup,|,charmap,emotions,iespell,media,advhr,|ltr,rtl',
+
+        theme_advanced_toolbar_align : "center",
+        theme_advanced_toolbar_location: 'top',
+        theme_advanced_resizing: false,
+        });
+
+    tinyMCE.init({
+        selector: "#id_summary",  // change this value according to your HTML
+        theme_advanced_statusbar: false,
+        theme_advanced_path : false,
+
+        height : 100,
+        theme : "advanced",
+        theme_advanced_toolbar_align : "center",
+        theme_advanced_toolbar_location : "top",
+        theme_advanced_buttons1 : "bold,italic,underline",
+        theme_advanced_buttons2 : "",
+        theme_advanced_buttons3 : ""
+    });
+    </script>
     <div class="recipe_form">
         <h1>New recipe by {{ user }}</h1>
         <form method="POST" class="post-form" enctype="multipart/form-data">
