--- a/comments/static/comments/css/comments.css
+++ b/comments/static/comments/css/comments.css
@@ -53,7 +53,7 @@
 .add-comment-form {
 }
 
-textarea {
+#id_comment {
   outline: none;
     background: #ffffff;
     color: #444444;
@@ -61,4 +61,15 @@ textarea {
     border: 1px solid #434343;
     padding: 20px;
     width: 680px;
+}
+
+span.stars, span.stars span {
+    display: block;
+    background: url(../img/stars.png) 0 -16px repeat-x;
+    width: 80px;
+    height: 16px;
+}
+
+span.stars span {
+    background-position: 0 0;
 }
