--- a/cooks/templates/cooks/add_recipe.html
+++ b/cooks/templates/cooks/add_recipe.html
@@ -1,91 +1,166 @@
 {% extends "stage9/base.html" %}
-
+{% load static %}
 {% block content %}
     <script>
     tinyMCE.init({
         selector: "#id_description",  // change this value according to your HTML
 
+        content_style: ".mce-content-body {font-size:16px;font-family:Arial,sans-serif;}",
+
         theme: "advanced",
+        width : 475,
+        height : 300,
         plugins: 'autolink,lists,pagebreak,style,layer,save,advhr,advimage,advlink,emotions,iespell,inlinepopups,insertdatetime,preview,media,searchreplace,print,contextmenu,paste,directionality,fullscreen,noneditable,visualchars,nonbreaking,xhtmlxtras,template,wordcount,advlist,autosave',
         paste_auto_cleanup_on_paste: "true",
         statusbar: false,
 
               // Theme options
         theme_advanced_path : false,
-        theme_advanced_buttons1: 'bold,italic,underline,strikethrough,|,justifyleft,justifycenter,justifyright,justifyfull',
-        theme_advanced_buttons2: 'cut,copy,paste,pastetext,pasteword,|,search,replace,|,bullist,numlist,|,outdent,indent,blockquote,|,undo,redo,|,insertdate,inserttime,preview',
-        theme_advanced_buttons3: 'hr,removeformat,visualaid,|,sub,sup,|,charmap,emotions,iespell,media,advhr,|ltr,rtl',
+        theme_advanced_buttons1: 'undo,redo,bold,italic,underline,justifyleft,justifyfull,justifyright,emotions,bullist,numlist',
 
-        theme_advanced_toolbar_align : "center",
+        theme_advanced_toolbar_align : "left",
         theme_advanced_toolbar_location: 'top',
-        theme_advanced_resizing: false,
+        theme_advanced_resizing: false
         });
 
-    tinyMCE.init({
-        selector: "#id_summary",  // change this value according to your HTML
-        theme_advanced_statusbar: false,
-        theme_advanced_path : false,
-
-        height : 100,
-        theme : "advanced",
-        theme_advanced_toolbar_align : "center",
-        theme_advanced_toolbar_location : "top",
-        theme_advanced_buttons1 : "bold,italic,underline",
-        theme_advanced_buttons2 : "",
-        theme_advanced_buttons3 : ""
-    });
     </script>
     <div class="recipe_form">
-        <h1>New recipe by {{ user }}</h1>
+        <h3 id="recipe_form_h">NEW RECIPE</h3>
         <form method="POST" class="post-form" enctype="multipart/form-data">
             {% csrf_token %}
-            {{ recipe_form.as_p }}
+            <div class="recipe_field">
+                <p class="label_form label_title">TITLE</p>
+                <div class="recipe_field_allign_title">
+                    {{ recipe_form.title }}
+                    <p class="help_form">Please fill this field, max 100 characters</p>
+                    <p class="example_form">ex: Southern Grits Casserole</p>
+                </div>
+            </div>
+            <div class="recipe_field">
+                <div class="recipe_field_allign">
+                    {{ recipe_form.summary }}
+                    <p class="help_form">Please fill this field, max 100 characters</p>
+                    <p class="example_form">ex: Southern Grits Casserole</p>
+                </div>
+                <p class="label_form float_labels">SUMMARY</p>
+            </div>
+            <div class="recipe_field">
+                <div class="recipe_field_allign">
+                    {{ recipe_form.description }}
+                    {% if recipe_form.description.errors %}
+                        {% for error in field.errors %}
+                            <div class="alert alert-danger">
+                                <strong>{{ error|escape }}</strong>
+                            </div>
+                        {% endfor %}
+                    {% endif %}
+                    <p class="help_form">Please fill this field, max 100 characters</p>
+                    <p class="example_form">ex: Southern Grits Casserole</p>
+                </div>
+                <p class="label_form float_labels">INSTRUCTIONS</p>
+            </div>
             {{ ingredient_formset.management_form }}
-            <table id="ingredient_formsetTable" border="0" cellpadding="0" cellspacing="0">
-                <caption>Ingredients</caption>
-                <tbody>
-                <tr>
-                    <td>Ingredient name</td>
-                    <td>quantity</td>
-                    <td>units</td>
-                    <td>note</td>
-                </tr>
-                    {% for form in ingredient_formset.forms %}
-                    <tr>
-                        <td>{{ form.ingredient }}</td>
-                        <td>{{ form.quantity }}</td>
-                        <td>{{ form.unit }}</td>
-                        <td>{{ form.note }}</td>
-                    </tr>
-                        {% for hidden in form.hidden_fields %}
-                            {{ hidden }}
-                        {% endfor %}
-                    {% endfor %}
-                </tbody>
-            </table>
-            <br>
-            {{ difficulty_form.as_p }}
-            {{ cuisine_form.as_p }}
+            <div class="recipe_field">
+                <div class="recipe_field_allign">
+                    <table id="ingredient_formsetTable" border="0" cellpadding="0" cellspacing="10">
+                        <tbody>
+                        <tr>
+                            <td>Ingredient</td>
+                            <td>quantity</td>
+                            <td>units</td>
+                            <td>note</td>
+                        </tr>
+                            {% for form in ingredient_formset.forms %}
+                            <tr>
+                                <td>{{ form.ingredient }}</td>
+                                <td>{{ form.quantity }}</td>
+                                <td>{{ form.unit }}</td>
+                                <td>{{ form.note }}</td>
+                            </tr>
+                                {% for hidden in form.hidden_fields %}
+                                    {{ hidden }}
+                                {% endfor %}
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                    <p class="help_form">Please fill this field, max 100 characters</p>
+                    <p class="example_form">ex: Southern Grits Casserole</p>
+                </div>
+                <p class="label_form float_labels">INGREDIENTS</p>
+            </div>
             {{ mealtype_formset.management_form }}
-            <table id="mealtype_formsetTable" border="0" cellpadding="0" cellspacing="0">
-                <caption>Meal type</caption>
-                <tbody>
-                    {% for form in mealtype_formset.forms %}
-                    <tr>
-                        <td>{{ form.mealtype }}</td>
-                    </tr>
-                        {% for hidden in form.hidden_fields %}
-                            {{ hidden }}
-                        {% endfor %}
-                    {% endfor %}
-                </tbody>
-            </table>
+            <div class="recipe_field" style="float: right; position: relative; width: 475px;">
+                <div class="recipe_field_allign" style="border-style: double; position: relative; width: 475px; border: 1px solid #9a9a9a; float: right; padding:12px; padding-top: 30px;">
+                    <div style="display: inline; float: right;">{{ difficulty_form.difficulty }}</div>
+                    <p class="label_form float_labels">DIFFICULTY</p>
+                    <div style="display: inline; float: right; margin-right:30px">{{ cuisine_form.cuisine }}</div>
+                    <p class="label_form float_labels" style="margin-right: 34px;">CUSINE</p>
+                    <div style="display: inline; float: right;">{{ recipe_form.portions }}</div>
+                    <p class="label_form float_labels">PORTIONS</p>
+                    <div style="display: inline; float: right; margin-right:20px">
+                        <table style="display: inline; float: right;" id="mealtype_formsetTable" border="0" cellpadding="0" cellspacing="0">
+                            <tbody>
+                                {% for form in mealtype_formset.forms %}
+                                <tr>
+                                    <td>{{ form.mealtype }}</td>
+                                </tr>
+                                    {% for hidden in form.hidden_fields %}
+                                        {{ hidden }}
+                                    {% endfor %}
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                    <p class="label_form float_labels">MEAL TYPE</p>
+                    <div style="clear: both; padding-left:14px; position: relative; left: 74px; top: 27px; background: white; width:302px;">
+                        <div class="glyphicon glyphicon-time" style="top:4px; margin-right: 5px; color: #9a9a9a; font-size:1.5em; clear: both"></div>
+                        <p class="label_form_time" style="margin-top:3px; display: inline; clear: both;">COOKING TIME</p>
+                        {{ cookingtime_form.hours}}
+                        <p style="display: inline; font-weight: bold;">:</p>
+                        {{ cookingtime_form.minutes}}
+                    </div>
+                </div>
+            </div>
+            <script type="text/javascript">
+                function upload_img(input) {
+                    if (input.files && input.files[0]) {
+                        var reader = new FileReader();
+
+                        reader.onload = function (e) {
+                            $('#img_id').attr('src', e.target.result);
+                        };
+
+                        reader.readAsDataURL(input.files[0]);
+                    }
+                }
+
+            </script>
+            <div style="clear: both; padding-left: 37%; padding-right: 12%; padding-top: 10%; margin-bottom: 40px;">
+                <p class="label_form" style="display: inline;">IMAGE</p>
+                {{ recipe_form.photo }}
+            </div>
             <br>
-            <p>working time</p>
-            {{ workingtime_form.as_p }}
-            <p>cooking time</p>
-            {{ cookingtime_form.as_p }}
-            <button type="submit" class="" style="position: absolute; right:10px; bottom: 10px;">Save</button>
+            <div style="position: absolute; right:8%; bottom: 10px;">
+                <div class="glyphicon glyphicon-option-horizontal" style="display:inline; color: #fabdb8; font-size:1.5em; clear: both"></div>
+                <div class="glyphicon glyphicon-option-horizontal" style="display:inline; color: #fabdb8; font-size:1.5em; clear: both"></div>
+                <div class="glyphicon glyphicon-option-horizontal" style="display:inline; color: #fabdb8; font-size:1.5em; clear: both"></div>
+                <div class="glyphicon glyphicon-option-horizontal" style="display:inline; color: #fabdb8; font-size:1.5em; clear: both"></div>
+                <div class="glyphicon glyphicon-option-horizontal" style="display:inline; color: #fabdb8; font-size:1.5em; clear: both"></div>
+                <div class="glyphicon glyphicon-option-horizontal" style="display:inline; color: #fabdb8; font-size:1.5em; clear: both"></div>
+                <div class="glyphicon glyphicon-option-horizontal" style="display:inline; color: #fabdb8; font-size:1.5em; clear: both"></div>
+                <div class="glyphicon glyphicon-option-horizontal" style="display:inline; color: #fabdb8; font-size:1.5em; clear: both"></div>
+                <div class="glyphicon glyphicon-triangle-right" style="display:inline; color: #fabdb8; font-size:1.5em; clear: both"></div>
+                <button type="submit" class="" style="display:inline; color:black; font-weight: bold; background: #fabdb8;">SUBMIT</button>
+                <div class="glyphicon glyphicon-triangle-left" style="display:inline; color: #fabdb8; font-size:1.5em; clear: both"></div>
+                <div class="glyphicon glyphicon-option-horizontal" style="display:inline; color: #fabdb8; font-size:1.5em; clear: both"></div>
+                <div class="glyphicon glyphicon-option-horizontal" style="display:inline; color: #fabdb8; font-size:1.5em; clear: both"></div>
+                <div class="glyphicon glyphicon-option-horizontal" style="display:inline; color: #fabdb8; font-size:1.5em; clear: both"></div>
+                <div class="glyphicon glyphicon-option-horizontal" style="display:inline; color: #fabdb8; font-size:1.5em; clear: both"></div>
+                <div class="glyphicon glyphicon-option-horizontal" style="display:inline; color: #fabdb8; font-size:1.5em; clear: both"></div>
+                <div class="glyphicon glyphicon-option-horizontal" style="display:inline; color: #fabdb8; font-size:1.5em; clear: both"></div>
+                <div class="glyphicon glyphicon-option-horizontal" style="display:inline; color: #fabdb8; font-size:1.5em; clear: both"></div>
+                <div class="glyphicon glyphicon-option-horizontal" style="display:inline; color: #fabdb8; font-size:1.5em; clear: both"></div>
+            </div>
             <button type="submit" class="" name="delete" value="delete" style="position: absolute; right:10px; top: 10px;">Delete</button>
         </form>
     </div>
