--- a/tinymce/static/tinymce/js/tiny_mce/themes/advanced/skins/default/content.css
+++ b/tinymce/static/tinymce/js/tiny_mce/themes/advanced/skins/default/content.css
@@ -1,4 +1,5 @@
-body, td, pre {color:#000; font-family:Verdana, Arial, Helvetica, sans-serif; font-size:10px; margin:8px;}
+@import url(//fonts.googleapis.com/css?family=Open+Sans:300,400,600,700);
+body, td, pre {color:#000; font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif; font-size:18px; font-weight: 300; margin:8px;}
 body {background:#FFF;}
 body.mceForceColors {background:#FFF; color:#000;}
 body.mceBrowserDefaults {background:transparent; color:inherit; font-size:inherit; font-family:inherit;}
